Added ability to get models by their price id.
