# backend/src/entities/prices/price.controller.ts
@@ -3,6 +3,7 @@ import Price from './price.model'
 import cars from '../../../../cars'
 import { Request, Response } from 'express'
 import PriceI from './price.interface'
+import Model from '../models/model.model'
 
 export default class PriceController extends BaseController {
   constructor() {
@@ -69,6 +70,37 @@ export default class PriceController extends BaseController {
       })
     } catch (error) {
       res.status(400).send(`Error in PUT ${this.modelName}`)
+    }
+  }
+
+  public getModelsById = async (req: Request, res: Response) => {
+    try {
+      const { id } = req.params
+      this.model.findOne({_id: id}, (error, result) => {
+        if (!result) {
+          res.status(404).send(`Can not find model with id: ${id}`)
+
+          return
+        }
+
+        const modelEntity = Model
+
+        modelEntity.find({prices: {_id: id}}, (error, result) => {
+          if (!result) {
+            res.status(404).send(`Can not find any models with given price id: ${id}`)
+            return
+          }
+
+          if (!result.length) {
+            res.status(404).send(`Can not find any models with given price id: ${id}`)
+            return
+          }
+
+          res.send(result)
+        }).populate("prices")      
+      })
+    } catch (error) {
+      res.status(400).send(`Error in GET ${this.modelName}`)
     }
   }
 }
